@@ -28,6 +28,7 @@ Other features
  * Added support for displaying ``non_field_errors`` when validation fails in the page editor (Matt Westcott)
  * Added `WAGTAILADMIN_RECENT_EDITS_LIMIT` setting to to define the number of your most recent edits on the dashboard (Maarten Kling)
  * Added link to the full Elasticsearch setup documentation from the Performance page (Matt Westcott)
+ * Tag input fields now accept spaces in tags by default, and can be overridden with the ``TAG_SPACES_ALLOWED`` setting (Kees Hink, Alex Gleason)
 
 
 Bug fixes
